# Vibi

./: .env.example  .gitignore  DESIGN_IMPROVEMENTS.md  README.md  VIBI_IMPROVEMENTS_SUMMARY.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOY.md  DOCUMENTATION.md  Dockerfile  QUICKSTART.md  README.md  ROADMAP.md  START_HERE.md  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  auth.py  bookings.py  properties.py  users.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/database/: __init__.py
backend/app/models/: __init__.py  booking.py  property.py  user.py
backend/app/schemas/: __init__.py  booking.py  property.py  user.py
backend/app/services/: __init__.py  base.py  booking.py  property.py  user.py
backend/tests/: __init__.py  conftest.py  test_bookings.py
frontend/: DEVELOPMENT_GUIDE.md  Dockerfile  README.md  nginx.conf  package.json
frontend/src/: config.ts  index.css
frontend/src/api/: client.ts  services.ts
frontend/src/app/router/: AppRouter.tsx  (+1 more)
frontend/src/pages/: bookings-page.tsx  dashboard-page.tsx  error-page.tsx  login-page.tsx  not-found-page.tsx  properties-page.tsx  types.ts
frontend/src/services/: session.ts
frontend/src/types/: api.ts
frontend/src/utils/: format.ts
web/: README.md  json-post.js  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/data/: properties.ts
web/src/pages/: HomePage.tsx
(+19 files in other folders)
