[project]
name = "vibi-backend"
version = "1.0.0"
description = "Backend API para plataforma de reserva de alojamientos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.27.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21.0",
    "python-multipart>=0.0.6",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
